<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:title="@string/flowers"
        android:orderInCategory="100"
        android:id="@+id/flowers">
    </item>
    <item android:title="@string/bouquets"
        android:orderInCategory="100"
        android:id="@+id/bouquets" />
    <item android:title="@string/for_wedding"
        android:orderInCategory="100"
        android:id="@+id/for_wedding"/>
    <item android:title="@string/balls"
        android:orderInCategory="100"
        android:id="@+id/balls"/>
    <item android:title="@string/toys"
        android:orderInCategory="100"
        android:id="@+id/toys"/>
</menu>